@@ -15,6 +15,7 @@ Bug fixes
  - [web] respect SOGoLanguage and SOGoSupportedLanguages (#4169)
  - [web] fixed adding list members with multiple email addresses
  - [web] fixed responsive condition of login page (960px to 1023px)
+ - [core] newly subscribed calendars are excluded from freebusy (#3354)
 
 3.2.9 (2017-05-09)
 ------------------
